[package]
name = "x25519-dalek-fiat"
edition = "2018"
# Before changing this:
# - update version in README.md
# - update html_root_url
# - update CHANGELOG
version = "0.1.1"
authors = [
    "opensource+ed25519-dalek-fiat@fb.com",
    "Konstantinos Chalkias <kostascrypto@fb.com>",
    "François Garillot <francois@garillot.net>",
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/novifinancial/x25519-dalek"
documentation = "https://docs.rs/x25519-dalek-fiat"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "curve25519", "key-exchange", "x25519", "diffie-hellman"]
description = "X25519 elliptic curve Diffie-Hellman key exchange in pure-Rust, using curve25519-dalek."
exclude = [
    ".gitignore",
    ".travis.yml",
    "CONTRIBUTING.md",
]

[package.metadata.docs.rs]
#rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/curve25519-dalek-1.0.1/docs/assets/rustdoc-include-katex-header.html"]
features = ["nightly"]

[dependencies]
curve25519-dalek-fiat = { version = "0.1.0", default-features = false }
rand_core = { version = "0.6", default-features = false }
# `serde` is renamed to `our_serde` in order to avoid a name collision between
# importing the serde dependency and enabling the curve25519-dalek/serde feature
our_serde = { package = "serde", version = "1", default-features = false, optional = true, features = ["derive"] }
zeroize = { version = "1.4.2", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
bincode = "1"
criterion = "0.3.0"

[[bench]]
name = "x25519"
harness = false

[features]
default = ["std", "u64_backend"]
serde = ["our_serde", "curve25519-dalek-fiat/serde"]
std = ["curve25519-dalek-fiat/std"]
nightly = ["curve25519-dalek-fiat/nightly"]
fiat_u64_backend = ["curve25519-dalek-fiat/fiat_u64_backend"]
u64_backend = ["curve25519-dalek-fiat/u64_backend"]
u32_backend = ["curve25519-dalek-fiat/u32_backend"]
